--- a/index.html
+++ b/index.html
@@ -3,72 +3,118 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tralalero Tralala</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <title>Digital Roots</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4247/4247490.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Main Navigation">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tralalero Tralala</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#about">Sobre Nosaltres</a></li>
-            <li class="nav-item"><a class="nav-link" href="#services">Serveis</a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact">Contacte</a></li>
-          </ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Menú principal">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Digital Roots</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Mostra el menú">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#services">Serveis</a></li>
+          <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonis</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contacte</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Carousel -->
+  <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Presentació principal">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://picsum.photos/seed/web/1200/400" class="d-block w-100" alt="Pantalla amb codi HTML">
+        <div class="carousel-caption d-none d-md-block">
+          <h1 class="bg-primary p-2 d-inline-block rounded">Tecnologia amb propòsit</h1>
+          <p class="bg-secondary p-2 d-inline-block rounded">Creem webs accessibles i sostenibles.</p>
         </div>
       </div>
-    </nav>
-  </header>
+      <div class="carousel-item">
+        <img src="https://picsum.photos/seed/green/1200/400" class="d-block w-100" alt="Servidor ecològic">
+        <div class="carousel-caption d-none d-md-block">
+          <h1 class="bg-primary p-2 d-inline-block rounded">Impacte positiu</h1>
+          <p class="bg-secondary p-2 d-inline-block rounded">Transformem negocis amb consciència ambiental.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" aria-label="Anterior">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" aria-label="Següent">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+  </div>
 
-  <main class="container mt-4">
-    <section id="about" class="mb-4">
-      <h2>Sobre Nosaltres</h2>
-      <p>Som una empresa compromesa amb l’accessibilitat web i la inclusió digital.</p>
-    </section>
-
-    <section id="services" class="mb-4">
-      <h2>Serveis</h2>
-      <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Servei 1
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Descripció del servei 1.</strong> Informació detallada sobre el nostre primer servei.
+  <!-- Services Section -->
+  <section id="services" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="mb-4">Els nostres serveis</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 border-primary">
+            <div class="card-body">
+              <h5 class="card-title">Disseny Web Accessible</h5>
+              <p class="card-text">Webs pensades per a tothom, alineades amb els estàndards d'accessibilitat WCAG 2.1.</p>
             </div>
           </div>
         </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Servei 2
-            </button>
-          </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Descripció del servei 2.</strong> Explicació sobre les característiques i beneficis.
+        <div class="col">
+          <div class="card h-100 border-primary">
+            <div class="card-body">
+              <h5 class="card-title">Consultoria Verda</h5>
+              <p class="card-text">Optimització ecològica de llocs web per reduir emissions digitals.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 border-primary">
+            <div class="card-body">
+              <h5 class="card-title">Tallers i Formació</h5>
+              <p class="card-text">Capacitació en bones pràctiques digitals per a equips tècnics i creatius.</p>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="contact" class="mb-4">
-      <h2>Contacte</h2>
-      <form>
+  <!-- Testimonials -->
+  <section id="testimonials" class="py-5 bg-secondary text-white">
+    <div class="container">
+      <h2 class="text-center mb-4">Què diuen de nosaltres</h2>
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <blockquote class="blockquote">
+            <p>"Gràcies a Digital Roots, el nostre web ara és accessible per a tothom i consumeix un 40% menys de recursos!"</p>
+            <footer class="blockquote-footer text-white">Anna M., <cite title="Companyia fictícia">EcoSolutions</cite></footer>
+          </blockquote>
+        </div>
+        <div class="col-md-6 mb-4">
+          <blockquote class="blockquote">
+            <p>"La seva formació ens ha canviat la manera de desenvolupar. Altament recomanats!"</p>
+            <footer class="blockquote-footer text-white">Jordi P., <cite title="Companyia fictícia">WebResponsable</cite></footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Form -->
+  <section id="contact" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Contacta amb nosaltres</h2>
+      <form class="mx-auto" style="max-width: 600px;" aria-label="Formulari de contacte">
         <div class="mb-3">
           <label for="name" class="form-label">Nom</label>
           <input type="text" class="form-control" id="name" required aria-required="true">
@@ -79,18 +125,21 @@
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Missatge</label>
-          <textarea class="form-control" id="message" rows="3" required aria-required="true"></textarea>
+          <textarea class="form-control" id="message" rows="4" required aria-required="true"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
-    </section>
-  </main>
+    </div>
+  </section>
 
-  <footer class="bg-primary text-white text-center py-3">
-    <p>&copy; 2025 Tralalero Tralala</p>
+  <!-- Footer -->
+  <footer class="bg-primary text-white text-center py-4">
+    <div class="container">
+      <p>&copy; 2025 Digital Roots. Tots els drets reservats.</p>
+      <p><a href="#" class="text-white text-decoration-underline">Política de privacitat</a> | <a href="#" class="text-white text-decoration-underline">Accessibilitat</a></p>
+    </div>
   </footer>
 
-  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
