--- a/index.html
+++ b/index.html
@@ -110,6 +110,52 @@
     </div>
   </section>
 
+  <!-- FAQ Section -->
+  <section id="faq" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-4">Preguntes Freqüents</h2>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Quins estàndards d'accessibilitat utilitzeu?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Seguim les directrius WCAG 2.1.</strong> Assegurem que els nostres dissenys siguin inclusius per a totes les persones, independentment de les seves capacitats.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Com reduïu l'impacte ambiental dels webs?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Mitjançant optimitzacions tècniques.</strong> Reduïm el pes de les pàgines, utilitzem servidors verds i fomentem bones pràctiques en el desenvolupament.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Oferiu formació personalitzada?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Sí, adaptem els tallers a les necessitats del vostre equip.</strong> Tant si sou desenvolupadors, dissenyadors o gestors de projecte, tenim continguts útils per a vosaltres.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <!-- Contact Form -->
   <section id="contact" class="py-5">
     <div class="container">
