--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Digital Roots</title>
+  <title>Adidas</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4247/4247490.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -13,9 +13,9 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Menú principal">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Menú principal" role="navigation" aria-labelledby="navbar" aria-roledescription="navigation"> 
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Digital Roots</a>
+      <a class="navbar-brand" href="#">Adidas</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
         aria-controls="mainNav" aria-expanded="false" aria-label="Mostra el menú">
         <span class="navbar-toggler-icon"></span>
@@ -24,6 +24,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#services">Serveis</a></li>
           <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonis</a></li>
+          <li class="nav-item"><a class="nav-link" href="#faq">F.A.Q.</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contacte</a></li>
         </ul>
       </div>
@@ -31,57 +32,70 @@
   </nav>
 
   <!-- Hero Carousel -->
-  <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Presentació principal">
+  <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Presentació principal" role="region" aria-labelledby="heroCarousel" aria-roledescription="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://picsum.photos/seed/web/1200/400" class="d-block w-100" alt="Pantalla amb codi HTML">
-        <div class="carousel-caption d-none d-md-block">
-          <h1 class="bg-primary p-2 d-inline-block rounded">Tecnologia amb propòsit</h1>
-          <p class="bg-secondary p-2 d-inline-block rounded">Creem webs accessibles i sostenibles.</p>
-        </div>
+        <img src="https://picsum.photos/seed/web/1200/400" class="d-block w-100" alt="Banner 1">
       </div>
       <div class="carousel-item">
-        <img src="https://picsum.photos/seed/green/1200/400" class="d-block w-100" alt="Servidor ecològic">
-        <div class="carousel-caption d-none d-md-block">
-          <h1 class="bg-primary p-2 d-inline-block rounded">Impacte positiu</h1>
-          <p class="bg-secondary p-2 d-inline-block rounded">Transformem negocis amb consciència ambiental.</p>
-        </div>
+        <img src="https://picsum.photos/seed/green/1200/400" class="d-block w-100" alt="Banner 2">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" aria-label="Anterior">
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev"
+      aria-label="Anterior">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" aria-label="Següent">
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next"
+      aria-label="Següent">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
     </button>
   </div>
 
   <!-- Services Section -->
-  <section id="services" class="py-5 bg-light">
+  <section id="services" class="py-5 bg-light" aria-label="Serveis d'Adidas" role="region" aria-labelledby="services" aria-roledescription="section">
     <div class="container text-center">
       <h2 class="mb-4">Els nostres serveis</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100 border-primary">
             <div class="card-body">
-              <h5 class="card-title">Disseny Web Accessible</h5>
-              <p class="card-text">Webs pensades per a tothom, alineades amb els estàndards d'accessibilitat WCAG 2.1.</p>
+              <h5 class="card-title">Disseny Esportiu Personalitzat</h5>
+              <p class="card-text">
+                Oferim un servei complet de personalització de roba esportiva per a clubs, escoles, gimnasos i
+                esdeveniments esportius. Treballem colze a colze amb els nostres clients per dissenyar equipacions que
+                reflecteixin la seva identitat visual i reforcin l’esperit d’equip. A més, utilitzem eines de disseny
+                digital per permetre revisions i modificacions ràpides abans de la producció. Sigui per un torneig local
+                o per un llançament oficial, t’ajudem a destacar amb estil propi i funcionalitat garantida.
+              </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100 border-primary">
             <div class="card-body">
-              <h5 class="card-title">Consultoria Verda</h5>
-              <p class="card-text">Optimització ecològica de llocs web per reduir emissions digitals.</p>
+              <h5 class="card-title">Tecnologia i Rendiment</h5>
+              <p class="card-text">
+                Els nostres productes incorporen teixits d’última generació, com ara materials que regulen la
+                temperatura corporal, expulsen la humitat i milloren l’aerodinàmica en moviment. Treballem amb
+                esportistes professionals per testejar i perfeccionar cada línia, assegurant que el rendiment es
+                mantingui al màxim nivell en qualsevol disciplina. A més, el nostre enfocament tecnològic inclou patrons
+                ergonòmics, acabats sense costures i compatibilitat amb wearables intel·ligents, perquè el teu rendiment
+                mai tingui límits.
+              </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100 border-primary">
             <div class="card-body">
-              <h5 class="card-title">Tallers i Formació</h5>
-              <p class="card-text">Capacitació en bones pràctiques digitals per a equips tècnics i creatius.</p>
+              <h5 class="card-title">Sostenibilitat Activa</h5>
+              <p class="card-text">
+                El nostre compromís amb el medi ambient no és una moda: és part del nostre ADN. Utilitzem filats
+                reciclats provinents de plàstic recuperat dels oceans, reduïm al màxim l’ús d’aigua en els processos de
+                tintura i optem per empaquetats biodegradables. També col·laborem amb proveïdors locals i fabricants amb
+                certificacions ecològiques per minimitzar l’impacte logístic. Amb cada producte d'Adidas, no només
+                millores el teu rendiment esportiu, sinó que també fas un pas responsable cap a un futur més net i just.
+              </p>
             </div>
           </div>
         </div>
@@ -90,20 +104,24 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials" class="py-5 bg-secondary text-white">
+  <section id="testimonials" class="py-5 bg-secondary text-white"  aria-label="Testimonis d'Adidas" role="region" aria-labelledby="testimonials" aria-roledescription="section">
     <div class="container">
       <h2 class="text-center mb-4">Què diuen de nosaltres</h2>
       <div class="row">
         <div class="col-md-6 mb-4">
           <blockquote class="blockquote">
-            <p>"Gràcies a Digital Roots, el nostre web ara és accessible per a tothom i consumeix un 40% menys de recursos!"</p>
-            <footer class="blockquote-footer text-white">Anna M., <cite title="Companyia fictícia">EcoSolutions</cite></footer>
+            <p>"Des que fem servir equipacions Adidas, el nostre equip es veu i se sent més professional. El tall, el
+              teixit i la comoditat són d’alt nivell. Són ideals per a l’entrenament i la competició."</p>
+            <footer class="blockquote-footer text-white">Clara R., <cite title="Club fictici">F.C. Vent de Ponent</cite>
+            </footer>
           </blockquote>
         </div>
         <div class="col-md-6 mb-4">
           <blockquote class="blockquote">
-            <p>"La seva formació ens ha canviat la manera de desenvolupar. Altament recomanats!"</p>
-            <footer class="blockquote-footer text-white">Jordi P., <cite title="Companyia fictícia">WebResponsable</cite></footer>
+            <p>"L’equip va quedar impressionat amb el disseny personalitzat i l’acabat dels productes Adidas. Tot va
+              arribar a temps i amb una qualitat que supera altres marques conegudes."</p>
+            <footer class="blockquote-footer text-white">Marc T., <cite title="Equip fictici">Running Team Verds</cite>
+            </footer>
           </blockquote>
         </div>
       </div>
@@ -111,53 +129,62 @@
   </section>
 
   <!-- FAQ Section -->
-  <section id="faq" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center mb-4">Preguntes Freqüents</h2>
-      <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Quins estàndards d'accessibilitat utilitzeu?
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Seguim les directrius WCAG 2.1.</strong> Assegurem que els nostres dissenys siguin inclusius per a totes les persones, independentment de les seves capacitats.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Com reduïu l'impacte ambiental dels webs?
-            </button>
-          </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Mitjançant optimitzacions tècniques.</strong> Reduïm el pes de les pàgines, utilitzem servidors verds i fomentem bones pràctiques en el desenvolupament.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Oferiu formació personalitzada?
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Sí, adaptem els tallers a les necessitats del vostre equip.</strong> Tant si sou desenvolupadors, dissenyadors o gestors de projecte, tenim continguts útils per a vosaltres.
-            </div>
+<section id="faq" class="py-5 bg-light" aria-label="Preguntes freqüents" role="region" aria-labelledby="faq" aria-roledescription="section">
+  <div class="container">
+    <h2 class="text-center mb-4">Preguntes Freqüents</h2>
+    <div class="accordion" id="accordionExample">
+
+      <!-- FAQ 1 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            aria-expanded="true" aria-controls="collapseOne">
+            Com puc personalitzar la roba esportiva del meu equip?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>Oferim un servei complet de personalització per a equips i clubs.</strong> A través del nostre configurador digital, pots escollir entre diversos estils de samarretes, pantalons, dessuadores i accessoris. Podràs afegir logotips, escuts, noms i números amb diferents tècniques com sublimació, brodat o estampació. També oferim assessorament creatiu si voleu un disseny exclusiu. Un cop confirmat el disseny, el nostre equip de producció s’encarrega de la fabricació amb materials d’alta qualitat.
           </div>
         </div>
       </div>
-    </div>
-  </section>
 
+      <!-- FAQ 2 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Quin tipus de roba i equipament teniu disponible?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>El nostre catàleg cobreix pràcticament totes les necessitats esportives.</strong> Oferim col·leccions per a futbol, bàsquet, handbol, running, fitness, i outdoor, entre d’altres. Disposem tant de línies professionals com recreatives, amb opcions per a homes, dones i nens. A més, pots trobar sabatilles tècniques, motxilles, balons, mitjons de compressió i altres accessoris pensats per optimitzar el rendiment i la comoditat durant la pràctica esportiva.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ 3 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Quin és el temps de lliurament per a comandes personalitzades?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>El temps de lliurament depèn de diversos factors.</strong> Les comandes d’articles de catàleg tenen un termini habitual d’entre 3 i 7 dies laborables, segons la disponibilitat de l’estoc. En el cas de comandes personalitzades, el procés pot trigar entre 2 i 4 setmanes, ja que inclou fases de disseny, validació, producció i control de qualitat. Si necessiteu una entrega urgent, consulteu amb el nostre equip per veure si és possible fer una gestió prioritària. També podeu fer seguiment del vostre enviament des del nostre portal.
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
   <!-- Contact Form -->
-  <section id="contact" class="py-5">
+  <section id="contact" class="py-5" aria-label="Formulari de contacte" role="region" aria-labelledby="contact" aria-roledescription="section">
     <div class="container">
       <h2 class="text-center mb-4">Contacta amb nosaltres</h2>
       <form class="mx-auto" style="max-width: 600px;" aria-label="Formulari de contacte">
@@ -179,13 +206,13 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-primary text-white text-center py-4">
+  <footer class="bg-primary text-white text-center py-3" aria-label="Peu de pàgina" role="contentinfo" aria-labelledby="footer" aria-roledescription="footer">
     <div class="container">
-      <p>&copy; 2025 Digital Roots. Tots els drets reservats.</p>
-      <p><a href="#" class="text-white text-decoration-underline">Política de privacitat</a> | <a href="#" class="text-white text-decoration-underline">Accessibilitat</a></p>
+      <p>&copy; 2025 Adidas - Edu & Sergio. Activitat Widgets Aria Bootstrap.</p>
     </div>
   </footer>
 
 </body>
+<script type="module" src="src/main.js"></script>
 
 </html>
