feat(): changes for footer

--- a/index.html
+++ b/index.html
@@ -206,9 +206,23 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-primary text-white text-center py-3" aria-label="Peu de pàgina" role="contentinfo" aria-labelledby="footer" aria-roledescription="footer">
+  <footer class="bg-primary text-white text-center py-4" aria-label="Peu de pàgina" role="contentinfo" aria-labelledby="footer" aria-roledescription="footer">
     <div class="container">
       <p>&copy; 2025 Adidas - Edu & Sergio. Activitat Widgets Aria Bootstrap.</p>
+      <ul class="list-inline mb-0" id="xarxes-socials">
+        <li class="list-inline-item">
+          <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="Instagram (s'obre en una pestanya nova)">Instagram</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="Facebook (s'obre en una pestanya nova)">Facebook</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="Twitter (s'obre en una pestanya nova)">Twitter</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="TikTok (s'obre en una pestanya nova)">TikTok</a>
+        </li>
+      </ul> 
     </div>
   </footer>
 
