feat(): footer with font awesome icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Adidas</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4247/4247490.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -211,20 +212,28 @@
       <p>&copy; 2025 Adidas - Edu & Sergio. Activitat Widgets Aria Bootstrap.</p>
       <ul class="list-inline mb-0" id="xarxes-socials">
         <li class="list-inline-item">
-          <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="Instagram (s'obre en una pestanya nova)">Instagram</a>
+          <a href="https://www.instagram.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Instagram (s'obre en una pestanya nova)">
+            <i class="fab fa-instagram fa-lg"></i>
+          </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="Facebook (s'obre en una pestanya nova)">Facebook</a>
+          <a href="https://www.facebook.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Facebook (s'obre en una pestanya nova)">
+            <i class="fab fa-facebook fa-lg"></i>
+          </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="Twitter (s'obre en una pestanya nova)">Twitter</a>
+          <a href="https://twitter.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Twitter (s'obre en una pestanya nova)">
+            <i class="fab fa-twitter fa-lg"></i>
+          </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline" aria-label="TikTok (s'obre en una pestanya nova)">TikTok</a>
+          <a href="https://www.tiktok.com/@adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="TikTok (s'obre en una pestanya nova)">
+            <i class="fab fa-tiktok fa-lg"></i>
+          </a>
         </li>
       </ul> 
     </div>
-  </footer>
+  </footer>  
 
 </body>
 <script type="module" src="src/main.js"></script>
