feat(): images added and content modified

--- a/index.html
+++ b/index.html
@@ -34,11 +34,20 @@
   <!-- Hero Carousel -->
   <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Presentació principal" role="region" aria-labelledby="heroCarousel" aria-roledescription="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://picsum.photos/seed/web/1200/400" class="d-block w-100" alt="Banner 1">
+      <div class="carousel-item">
+        <img src="public/img/banner2.jpg" class="d-block w-100" alt="Banner Football Collection">
       </div>
       <div class="carousel-item">
-        <img src="https://picsum.photos/seed/green/1200/400" class="d-block w-100" alt="Banner 2">
+        <img src="public/img/banner3.jpg" class="d-block w-100" alt="Banner Lightstrike Collection">
+      </div>
+      <div class="carousel-item">
+        <img src="public/img/banner4.jpg" class="d-block w-100" alt="Banner Performance meets Style">
+      </div>
+      <div class="carousel-item">
+        <img src="public/img/banner6.jpg" class="d-block w-100" alt="Banner Unleash the Beast">
+      </div>
+      <div class="carousel-item active">
+        <img src="public/img/banner5.jpg" class="d-block w-100" alt="Portada Adidas">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev"
