feat(): logo img on navbar and placeholders on form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Menú principal" role="navigation"
     aria-labelledby="navbar" aria-roledescription="navigation">
     <div class="container-fluid">
-      <img src="public/img/logo.png" alt="Logo Adidas" width=auto height="27" class="d-inline-block align-text-top" style="filter: invert(1);" />
+      <img src="public/img/logo.png" alt="Logo Adidas" width=auto height="27" class="d-inline-block align-text-top"
+        style="filter: invert(1);" />
       <a class="navbar-brand ms-2" href="#">adidas</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
         aria-controls="mainNav" aria-expanded="false" aria-label="Mostra el menú">
@@ -228,7 +229,8 @@
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Missatge</label>
-          <textarea class="form-control" id="message" rows="4" placeholder="Escriu el teu missatge aquí..." aria-required="true"></textarea>
+          <textarea class="form-control" id="message" rows="4" placeholder="Escriu el teu missatge aquí..."
+            aria-required="true"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
